--- a/src/screens/UserWallet/styles.module.scss
+++ b/src/screens/UserWallet/styles.module.scss
@@ -410,6 +410,7 @@
     bottom: 50px;
     right: 0px;
     background-position: bottom right;
+    z-index: -1;
   }
 
   @media (max-width: $screen-md) {
